index.css
:root {
    /*variable declaration*/
    --ocean-heght: 90vh;
    --top-bar-height: 9.7vh;

}

html {
    scrollbar-width: none;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    
}   

html, body {
    margin: 0;
    background: #0099ff;
    overflow: hidden;
}

#country-list {
    position: absolute;
    background: grey;
    transition: left 1s cubic-bezier(0.5, 0, 0.5, 1);
    width: 90vw;
    height: 75vh;
    border-radius: 0vmin 5vmin 5vmin 0vmin;
    top: 12%;
    z-index: 20;
    left: -90%;
    outline: 1px solid black;

}

#relative-wrapper {
    position: relative;
    border-radius: 0vmin 5vmin 5vmin 0vmin;
    width: 100%;
    height: 100%;
}

#country-list-toggle-frame {
    position: absolute;
    display: grid;
    place-items: center;
    width: 7vmin;
    height: 7vmin;
    left: 100%;
    top: 50%;
    transform: translateY(-50%);
    background: grey;
    border-radius: 0 100% 100% 0;
    border-top: 1px solid black;
    border-right: 1px solid black;
    border-bottom: 1px solid black;
}

#country-list-toggle-button {
    width: 80%;
    cursor: pointer;
}

#country-list-items-container {
    border-radius: 0vmin 5vmin 5vmin 0vmin;
    width: 100%;
    height: 100%; /* I don't know why 97.5% isn't correct here. */
    scrollbar-width: none;
    margin-top: auto;
    margin-bottom: auto;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(750px, 2fr));
    grid-auto-rows: 175px;
    column-gap: 5%;
    row-gap: 1%;
    justify-content: center;
    overflow-y: scroll;
}

.country-list-tile-item {
    display: flex;
    justify-content: space-between;
    background: white;
    overflow: hidden;
    cursor: pointer;
    container-type: inline-size;
    border-radius: 1vmin;
    margin-left: 1vmin;
    margin-right: 1vmin;

    img {
        margin: auto;
        height: 100%;
        outline: 1px solid black;
    }    
}

.country-list-tile-text {
    flex-grow: 1;
    display: grid;
    place-content: center;
    text-align: center;
    font-size: 6.5cqw;
}

#ocean {
    z-index: 1;
    width: 100dvw;
    height: 100dvh;
    display: flex;
    justify-content: center;
    align-items: center;
    background: #0099ff;

    #map-container {
        position: relative;
        display: flex;
        width: 80%;
        position: relative;
        justify-content: center;
        align-items: center;
    }

    #world-map {
        width: 100%;
        filter: drop-shadow(3px 5px 2px rgba(0,0,0,0.7));
    }
    
    polygon:hover {
        fill: white;
        cursor:pointer;
    }   

    polygon:active {
        fill: green;
    }

    svg {
        position: absolute;
        stroke: rgb(128, 128, 128);
        stroke-width: 0.3%;
        fill: grey;
        fill-opacity: 0.5;
        z-index: 10;

        -webkit-user-select: none; /* Safari */
        -moz-user-select: none;    /* Firefox */
        -ms-user-select: none;     /* IE 10+ */
        user-select: none;         /* Standard */
    }

    #map-compass {
        z-index: 10;
        left: 0%;
        top: 70%;
        width: 15%;
        filter: drop-shadow(3px 5px 2px rgba(0,0,0,0.7));
    }

    #map-top-bar {
        position: absolute;
        display: flex;
        width: 80%;
        top: 3%;
        justify-content: center;
    }

    .map-menu-button {
        display: grid;
        background: grey;
        border-radius: 5px;
        padding: 1%;
        min-height: 30px;
        place-content: center;        
        color: white;
        font-weight: 800;
        font-size: 20px;
        filter: drop-shadow(3px 5px 2px rgba(0,0,0,0.7));
    }

    .map-decor {
        position: absolute;
        z-index: 10;
    }
    
    #wave-1 { width: 7%; left: 0%; top: 32%;}
    #wave-2 {width: 7%; left: 39%; top: 74%;}
    #wave-3 {width: 7%; left: 67%; top: 85%;}
    #wave-4 {width: 7%; left: 90%; top: 38%;}
           
}

#page-1-bottom-bar {
    height: 9.7vh;
    background: grey;
}

#country-block {
    position: relative;
    display: flex;
    justify-content: space-between;
    align-items: center;
    position: absolute;
    overflow: hidden;
    z-index: -1;
    transform: translateX(-50%) translateY(-50%);
    left: 50%;
    bottom: 0vmin;
    height: 7vmin;
    background: grey;
    filter: drop-shadow(3px 5px 2px rgba(0,0,0,0.7));
}

#flag {
    height: 90%;
}

#country-name {
    place-content: center;
    font-size: 40px;
    color: white;
    height: 90%;
    width: 20%;
    flex-grow: 1;
    margin: 0vmin 1vmin;
}

#pages-container {
    position: absolute;
    top: 0%;
    max-width: 100vw;
    max-height: 100vh;
    transition: top 1s cubic-bezier(0.5, 0, 0.5, 1);
}

#pages-container.animate {
    top: -100%;
}



#page-2-top-bar {
    display: flex;
    justify-content: center;
    min-height: var(--top-bar-height);
    background: grey;
}

#return-button {
    width: 65px;
    height: 65px;
    margin-top: 1%;
    cursor: pointer;
}

#results-page {
    position: relative;
    box-sizing: border-box;
    background: rgb(252, 252, 235);
    display: flex;
    flex-direction: column;
    gap: 1.5vmin;
    align-items: center;
    height: 95vh;
    margin-top: 2.5vh;
    margin-bottom: 5vh;
    border-radius: 2% 2% 0% 2%;
    width: 40%;
    min-width: 800px;
    margin-left: auto;
    margin-right: auto;
    box-shadow: 5px 5px 10px black;
    overflow: hidden;

    h1 {
        font-size: 40px;
        margin: 0;
    }
}

#menu-container {
    width: 100%;
    height: 100%;
    overflow-x: hidden;
}

.menu-section-container {
    width: 100%;
    flex-grow: 0;
    row-gap: 2.5%;
    column-gap: 2%;
    background: rgb(255,255,255);
    justify-content: space-around;

}


.menu-subheader {
    width: 100%;
    height: 50px;
    background: rgb(165, 165, 165);
    display: grid;
    place-content: center;
    font-weight: bold;
    border-top: 1px solid black;
    border-bottom: 1px solid black;
    margin-top: 1%;
    margin-bottom: 1%;
}

.menu-subcontent {
    width: 100%;
    display: grid;
    grid-template-columns: repeat(auto-fit, 250px);
    column-gap: 5%;
    padding-left: 5%;
    padding-right: 5%;
    justify-content: start;
}


.recipe-card {
    position: relative;
    width: 250px;
    height: 250px;
    overflow: hidden;
    text-align: center;
    vertical-align: text-bottom;
    font-size: 25px;
    font-weight: bold;
    color: black;
    cursor: pointer;

    #thumbnail {
    height: 150px;
    width: 250px;
    outline: 1px solid black;
    object-fit: fill;
    }   
        
    .external-icon {
        position: absolute;
        transform: translateX(-100%);
        left: calc(100% - 10px);
        top: 10px;
        height: 30px;
        width: 30px;
        z-index: 20;
    }

    .internal {
        /*background: rgb(38, 186, 28);*/
    }

    .external {
        /*background: rgb(212, 206, 53);*/
    }
}


.recipe-card:hover {
    box-shadow: 5px 5px 10px black;
}

.recipe-text-container {
    display: grid;
    width: 250px;
    height: 75px;
    place-items: center;
}

#recipe-page {
    position: relative;
    width: 40%;
    min-width: 800px;
    overflow: hidden;
    background: rgb(252, 252, 235);
    margin: auto;
    display: flex;
    flex-direction: column;
    max-height: 95vh;
    min-height: 95vh;
    margin-top: 5vh;
    margin-bottom: 2.5vh;
    border-radius: 2% 2% 0 2%;
    box-shadow: 5px 5px 10px black;
}

#recipe-title {
    font-size: 40px;
}

#recipe-content {

    min-height: 0;
    flex-grow: 1;
    overflow-y: scroll;
    padding-left: 2%;
    padding-right: 2%;
    background: rgb(252, 252, 235);

    h1, h2, h3 {
        text-align: center;
    }

}
.fade {
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 50px;
    background: rgb(252, 252, 235);
    background: linear-gradient(to bottom,rgba(252, 252, 235, 0) 0%, rgba(252, 252, 235, 1) 75%, rgba(252, 252, 235, 1) 100%);
    pointer-events: none;
}

#recipe-ingredients {
    li {
        
        list-style-type: '☐  ';
    }

    li.checked {
        
        list-style-type: '☑  ';
    }
}


#unitswitch {
    --switch-width: 250px;
    position: relative;
    display: grid;
    grid-template-columns: 100px 100px;
    background: white;
    border-radius: 10px;
    overflow: hidden;
    outline: 1px solid black;
    width: var(--switch-width);
    justify-content: space-between;

    .unitswitch {
    cursor: pointer;
    display: grid;
    place-content: center;
    text-align: center;
    height: 30px;
    outline: 1px solid black;
    mix-blend-mode: difference;
    color: white;
    z-index: 100;
    font-size: 12px;
    }

    .unitswitch:hover {
        font-weight: bold;
    }

    #unitswitch-metric {
    }

    #unitswitch-imperial {
    }

    #unitswitch-color {
        background: black;
        position: absolute;
        left: calc(var(--switch-width) - 100px);
        transition: left 0.3s cubic-bezier(0.42, 0, 0.58, 1.0);
        top: 0%;
        width: 100px;
        height: 50px;
    }
}

#recipe-notes { 
    margin-bottom: 50px;
}


.top-bar {
    display: grid;
    place-content: center;
    margin-top: 2%;
    margin-bottom: 1%;
}

#recipe-picture {
    display: block;
    width: 95%;
    margin-left: auto;
    margin-right: auto;
}

.recipe-sub-header {
    display: block;
    margin-top: 10px;
    margin-bottom: 3px;
    font-weight: strong;
    font-size: 16px;

}

